# Gendiff_tk

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff_tk/: __init__.py  gendiff.py
gendiff_tk/scripts/: main.py
tests/: test_gendiff.py  test_main.py  test_scripts_main.py
tests/fixtures/: diff_text1.txt  diff_text2.txt  expected.txt  expected2.txt  expected3.txt  expected_same.txt
